<resources>
    <string name="app_name">Tcchan-FeelsBook</string>
    <string name="Love">Love</string>
    <string name="Joy">Joy</string>
    <string name="Surprise">Surprise</string>
    <string name="Anger">Anger</string>
    <string name="Sadness">Sadness</string>
    <string name="Fear">Fear</string>
    <string name="option_button">Option</string>
    <string name="message_text">Feels Book</string>
</resources>
