<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Main_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="normal|italic"
        app:fontFamily="@font/permanent_marker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/love_bt"
        android:tag="@string/Love"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="120dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:onClick="addEmotion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/love" />

    <ImageButton
        android:id="@+id/joy_bt"
        android:tag="@string/Joy"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="120dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:onClick="addEmotion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/happy" />

    <ImageButton
        android:id="@+id/surprised_bt"
        android:tag="@string/Surprise"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="120dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:onClick="addEmotion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wonderful" />

    <ImageButton
        android:id="@+id/angry_bt"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:onClick="addEmotion"
        android:tag="@string/Anger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/angry" />

    <ImageButton
        android:id="@+id/sad_bt"
        android:tag="@string/Sad"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:onClick="addEmotion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sad" />

    <ImageButton
        android:id="@+id/fear_bt"
        android:tag="Fear"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:onClick="addEmotion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shocked" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="313dp"
        android:layout_height="64dp"
        android:layout_marginTop="176dp"
        android:ems="10"
        android:hint="Max 100 Char."
        android:gravity="center"
        android:imeOptions="actionSend|flagNoEnterAction"
        android:inputType="textAutoCorrect|textCapSentences"
        android:maxLength="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/emotion_list"
        android:layout_width="327dp"
        android:layout_height="281dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/transparent"
        android:focusableInTouchMode="false"
        android:headerDividersEnabled="false"
        android:isScrollContainer="false"
        android:longClickable="true"
        android:radius="10dp"
        android:scrollbars="none"
        android:smoothScrollbar="true"
        app:fontFamily="@font/permanent_marker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933" />

    <TextView
        android:id="@+id/love_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1" />

    <TextView
        android:id="@+id/joy_counter"
        android:layout_width="9dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="92dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1" />

    <TextView
        android:id="@+id/surprise_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="152dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1" />

    <TextView
        android:id="@+id/anger_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="152dp"
        android:layout_marginRight="152dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1" />

    <TextView
        android:id="@+id/fear_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1" />

    <TextView
        android:id="@+id/sad_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1" />

</android.support.constraint.ConstraintLayout>